# crypto-price-watcher

./: LICENSE  meson.build
data/: data.gresource.xml  style.css
src/: Application.vala  DataService.vala  MainWindow.vala
src/Models/: Coin.vala
src/Widgets/: CoinEntry.vala
